--- a/public/back/css/common.css
+++ b/public/back/css/common.css
@@ -96,8 +96,7 @@ ul{
 
 /*右侧主体部分*/
 .lt-main{
-    height: 1000px;
-    width: 100%;
+    height: 3000px;
     padding-left: 180px;
     background-color: pink;
     padding-top: 50px;
@@ -108,7 +107,7 @@ ul{
 }
 .lt-main .lt-topbar{
     height: 50px;
-    line-height: 50px;
+    /*line-height: 50px;*/
     width: 100%;
     background-color: #3C8DBC;
     position: fixed;
