--- a/public/back/css/common.css
+++ b/public/back/css/common.css
@@ -23,6 +23,9 @@ ul{
 .mt-20{
     margin-top: 20px;
 }
+.mb-20{
+    margin-bottom: 20px;
+}
 .panel .panel-title{
     font-size: 22px;
     height: 40px;
