--- a/public/front/css/common.css
+++ b/public/front/css/common.css
@@ -9,6 +9,10 @@ body{
     padding: 0;
     list-style: none;
 }
+img{
+    width: 100%;
+    display: block;
+}
 
 .lt-cantainer{
     position: relative;
