--- a/public/front/css/common.css
+++ b/public/front/css/common.css
@@ -100,5 +100,53 @@ img{
     position: relative;
 }
 
-
-
+/*公用的搜索框样式*/
+.lt-search{
+    padding: 10px;
+    position: relative;
+}
+.lt-search .search-input{
+    height: 34px;
+    line-height: 34px;
+    font-size: 12px;
+    padding: 0;
+    margin: 0;
+    border:1px solid #007AFF;
+    border-radius: 5px;
+    padding-left: 15px;
+    padding-right: 55px;
+}
+.lt-search button{
+    position: absolute;
+    right: 10px;
+    top:10px;
+    border-radius: 0 5px 5px 0;
+}
+/*产品部分*/
+.lt-product{
+    padding: 10px;
+    position: relative;
+}
+.lt_product_item{
+    border:1px solid #ccc;
+    padding:10px;
+    text-align: center;
+    width: 48%;
+    float: left;
+    margin-bottom: 10px;
+}
+.lt_product_item img{
+    display: block;
+    width: 150px;
+    height: 150px;
+    margin: 0 auto;
+}
+.lt_product_item:nth-child(2n+1){
+    margin-right: 4%;
+}
+.lt_product_item .price{
+    color: red;
+}
+.lt_product_item .oldPrice {
+    text-decoration: line-through;
+}
